// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagingTable main snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fBPqci"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gOakuh"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 itMSJI StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 iCZFPP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
            />
          </div>
          <span>
            Group rows
          </span>
        </label>
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 itMSJI StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              checked=""
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eNPVFX StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
            >
              <svg
                class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 cUzstC"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            Sortable
          </span>
        </label>
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 itMSJI StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              checked=""
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eNPVFX StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
            >
              <svg
                class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 cUzstC"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            Filter
          </span>
        </label>
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 itMSJI StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 iCZFPP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
            />
          </div>
          <span>
            Paging
          </span>
        </label>
        <div
          class="StyledBox-sc-13pk1d4-0 hzkwpE"
        >
          <button
            aria-label="Open Drop"
            class="StyledButton-sc-323bzc-0 heIqNk Select__StyledSelectDropButton-sc-17idtfo-1 dukJWv"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hoBZOR"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dtQiSn"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 bcUlnk Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="multiple"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 jzyREm"
                style="min-width: auto;"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-ofa7kd-0 gMeCrH"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="18 9 12 15 6 9"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eCikKQ"
      />
      <div
        class="sc-bBHwJV loHyNL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 AFcjF sc-bdvvaa ePvsFT"
          role="grid"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ejwoDb sc-dkPtyc kBOvwF"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 100 0 auto; width: 146px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iZKEzd"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 300 0 auto; width: 300px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iZKEzd"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Inventory
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-dkPtyc kBOvwF"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fsDFvo"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ezQAit"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Item
                      <div
                        class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 heIqNk"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fsDFvo"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Qty
                      <div
                        class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 heIqNk"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fsDFvo"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Price
                      <div
                        class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 heIqNk"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fsDFvo"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Total
                      <div
                        class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 heIqNk"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-dkPtyc kBOvwF"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iYA-DvL"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iYA-DvL"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                    >
                      <input
                        aria-label="Filter data by Item"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 uZOkN"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iYA-DvL"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                    >
                      <input
                        aria-label="Filter data by Qty"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 uZOkN"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iYA-DvL"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                    >
                      <input
                        aria-label="Filter data by Price"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 uZOkN"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq bfesFX"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iYA-DvL"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                    >
                      <input
                        aria-label="Filter data by Total"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 uZOkN"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dExMjg sc-gsDJrp"
            style="min-width: 446px;"
          >
            <div />
            <div
              class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 fnkOhe sc-gKckTs fCGrse"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 knherS sc-furvIG bzvLFW"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 gMeCrH"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Fork
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      4
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      5.5
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kbIQNl"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 jkcPlU"
                    >
                      22
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 knherS sc-furvIG bzvLFW"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 gMeCrH"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Fork
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      1
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      5.2
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kbIQNl"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 jkcPlU"
                    >
                      5.2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 fnkOhe sc-gKckTs fCGrse"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 knherS sc-furvIG bzvLFW"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 gMeCrH"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Knife
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      3
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      2.5
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kbIQNl"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 jkcPlU"
                    >
                      7.5
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 knherS sc-furvIG bzvLFW"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 gMeCrH"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ijhKIv"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      Spoon
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      2
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 wZxjF"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cddmqI"
                    >
                      6.5
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 kbIQNl"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 jkcPlU"
                    >
                      13
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-pVTma"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 46 0 auto; width: 46px; max-width: 46px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 wygcy"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 wygcy"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iWJEXQ"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iWJEXQ"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iWJEXQ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 ehSmL"
                  >
                    Sum 40.44
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PagingTable simple snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="sc-bBHwJV loHyNL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-bdvvaa ePvsFT"
        role="grid"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-dkPtyc kBOvwF"
          style="min-width: 400px;"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
            role="row"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jnwlLj"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kuSryJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Item
                    <div
                      class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 heIqNk"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 jBvkdz"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jnwlLj"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kuSryJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Qty
                    <div
                      class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 heIqNk"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 jBvkdz"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jnwlLj"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kuSryJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Price
                    <div
                      class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 heIqNk"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 jBvkdz"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 llsnXp sc-eCImvq istoRj"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jnwlLj"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kuSryJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Total
                    <div
                      class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-hKwCoD jQFLdb"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hboplE"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 heIqNk"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 jBvkdz"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 dExMjg sc-gsDJrp"
          style="min-width: 400px;"
        >
          <div />
          <div
            class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
            role="rowgroup"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Fork
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    4
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    5.5
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    22
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
            role="rowgroup"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Knife
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    3
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    2.5
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    7.5
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-jRQAMF TNVAF"
            role="rowgroup"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iYasFZ sc-gKckTs fCGrse"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    Spoon
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    2
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    6.5
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 hvUCKZ sc-iCfLBT eOClQw"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhKIv"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 cddmqI"
                  >
                    13
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="StyledBox-sc-13pk1d4-0 hEZzzI"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iYasFZ"
          >
            <button
              class="StyledButton-sc-323bzc-0 fVhXpi sc-crHlIS gqFVKl"
              disabled=""
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bbjiaZ"
              >
                <svg
                  aria-label="Previous"
                  class="StyledIcon-ofa7kd-0 exrjxz"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="7 2 17 12 7 22"
                    stroke="#000"
                    stroke-width="2"
                    transform="matrix(-1 0 0 1 24 0)"
                  />
                </svg>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cvbRFG"
                />
                Previous
              </div>
            </button>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              Page 
            </span>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gLeHbw"
            />
            <div
              class="sc-kDThTU kzHRWr"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  aria-label="Select page to jump to"
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-jrQzUz jPSVfm sc-egiSv hofQjj"
                  inputmode="numeric"
                  pattern="[0-9]*"
                  type="text"
                  value="1"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 kuSryJ sc-iqsfdx llRCnf"
              >
                <button
                  class="StyledButton-sc-323bzc-0 knherS"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-ofa7kd-0 exrjxz"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,22 L12,2 M2,12 L22,12"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
                <button
                  class="StyledButton-sc-323bzc-0 knherS"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-label="Subtract"
                    class="StyledIcon-ofa7kd-0 exrjxz"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2,12 L22,12"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gLeHbw"
            />
            <span
              style="white-space: nowrap;"
            >
              of 1
            </span>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 iYasFZ"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 heIqNk Select__StyledSelectDropButton-sc-17idtfo-1 dukJWv"
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hoBZOR"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dtQiSn"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      aria-label="Select rows per page"
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 bcUlnk Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-bqiQRQ jksREU"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value="20 rows"
                    />
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 jzyREm"
                  style="min-width: auto;"
                >
                  <svg
                    aria-label="FormDown"
                    class="StyledIcon-ofa7kd-0 gMeCrH"
                    viewBox="0 0 24 24"
                  >
                    <polyline
                      fill="none"
                      points="18 9 12 15 6 9"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 iYasFZ"
          >
            <button
              class="StyledButton-sc-323bzc-0 fVhXpi sc-crHlIS gqFVKl"
              disabled=""
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bbjiaZ"
              >
                Next
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cvbRFG"
                />
                <svg
                  aria-label="Next"
                  class="StyledIcon-ofa7kd-0 exrjxz"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="7 2 17 12 7 22"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
